# Workshop-CMake

./: .gitignore  file.md
enthalten/: MysteryModule1.hpp
include/: Core.hpp  LibLoad.hpp  MysteryGame.hpp  Tahlesfou.hpp
src/: Core.cpp  main.cpp
src/code/: Core.cpp  main.cpp
src/part1/: CMakeLists.txt
src/part2/: CMakeLists.txt  libHack.cpp
src/part3/: CMakeLists.txt
src/part3/tests/: test_1.cpp  test_2.cpp
src/partB/: MysteryGame.cpp
src/partB/CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tests/: test_1.cpp  test_2.cpp
